--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,20 @@
 asgiref==3.6.0
+certifi==2022.12.7
+charset-normalizer==3.1.0
+coreapi==2.3.3
+coreschema==0.0.4
 Django==4.2
 django-cors-headers==3.14.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+idna==3.4
+itypes==1.2.0
+Jinja2==3.1.2
+MarkupSafe==2.1.2
 PyJWT==2.6.0
 pytz==2023.3
+requests==2.29.0
 sqlparse==0.4.4
 tzdata==2023.3
+uritemplate==4.1.1
+urllib3==1.26.15
