--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.6",
     "history": "^5.3.0",
+    "icons": "^1.0.0",
     "input-mask": "^1.1.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -16,6 +17,8 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
+    "react-table": "^7.8.0",
+    "remixicon": "^3.2.0",
     "tailwind-forms": "^1.0.6",
     "web-vitals": "^2.1.4"
   },
