--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "input-mask": "^1.1.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
