--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-select": "^5.7.3",
     "react-table": "^7.8.0",
     "remixicon": "^3.2.0",
+    "react-calendar": "^4.2.1",
     "tailwind-forms": "^1.0.6",
     "web-vitals": "^2.1.4"
   },
