--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "icons": "^1.0.0",
     "input-mask": "^1.1.20",
     "react": "^18.2.0",
+    "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
@@ -20,7 +22,6 @@
     "react-select": "^5.7.3",
     "react-table": "^7.8.0",
     "remixicon": "^3.2.0",
-    "react-calendar": "^4.2.1",
     "tailwind-forms": "^1.0.6",
     "web-vitals": "^2.1.4"
   },
